# kurogane

./: ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
docs/: README.md  examples.md  platforms.md  recipes.md  showcase.md  templates.md
kurogane/: Cargo.toml
kurogane-cli/: Cargo.toml  build.rs
kurogane/examples/: demo.rs  dom.rs  files-cors.rs  package.rs  server.rs
kurogane/examples/demo/: README.md
kurogane/examples/ipc/: index.html  rpc.html
kurogane/examples/webgl2/: index.html
kurogane/src/: app.rs  browser.rs  browser_registry.rs  cef_app.rs  chromium_flags.rs  client.rs  error.rs  fs.rs  ipc_browser.rs  ipc_protocol.rs  ipc_renderer.rs  lib.rs  logger.rs  runtime.rs  scheme.rs  shutdown.rs  spec.rs  window.rs  window_registry.rs
kurogane/src/app/: resolver.rs
kurogane/src/bridge/: mod.rs  runtime.js
kurogane/src/gpu/: backend.rs  detection.rs  linux.rs  mod.rs  windows.rs
kurogane/src/ipc/: binary.rs  browser.rs  browser_state.rs  envelope.rs  mod.rs  pending.rs  protocol.rs  renderer.rs  renderer_state.rs  responder.rs  router.rs  rpc.rs  utils.rs
kurogane/src/ipc/binary/: browser.rs  mod.rs  renderer.rs
kurogane/src/ipc/event/: browser.rs  mod.rs
kurogane/src/ipc/rpc/: browser.rs  mod.rs  renderer.rs
kurogane/src/ipc/stream/: browser.rs  mod.rs  renderer.rs
kurogane/src/ipc/transport/: message.rs  shm.rs
kurogane/src/sandbox/: linux.rs  mod.rs  windows.rs
runtime/: Cargo.toml
tests/: Cargo.toml  README.md  benchmark.rs  css-to-shader.rs  delegates.rs  files-cors.rs  gpu.rs  ipc.rs  multi-window.rs  pump.rs  (+2 more)
(+87 files in other folders)
