[workspace]
resolver = "2"
members = [
    "kurogane",
    "kurogane-cli",
    "kurogane-layout",
    "tests"
]

[workspace.package]
version = "0.0.4-beta.1"
edition = "2024"
license = "MIT"
authors = [
    "Piyush Raj <hello@piyushraj.org>"
]
repository = "https://github.com/0x48piraj/kurogane"

[workspace.dependencies]
cef = { git = "https://github.com/tauri-apps/cef-rs", rev = "dab51658a8a6317040eb0ebab39b68ede42c836f" }
kurogane-layout = { path = "kurogane-layout" }
