[package]
name = "kurogane"
version = "0.0.1"
edition = "2024"

[dependencies]
cef = { git = "https://github.com/tauri-apps/cef-rs" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dirs = "6"
shared_memory = "0.12.4"
mime_guess = "2"
url = "2.5.8"
percent-encoding = "2.3.2"

[dev-dependencies]
tempfile = "3"

[features]
debug = []
