[package]
name = "kurogane"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
kurogane-layout.workspace = true
cef.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dirs = "6"
shared_memory = "0.12.4"
mime_guess = "=2.0.5"
url = "2.5.8"
percent-encoding = "2.3.2"
ctrlc = { version = "3.5.2", features = ["termination"] }

[dev-dependencies]
tempfile = "3"
proptest = "1"

[features]
debug = []
